@startuml

class MesaGraphics
MesaGraphics : start()

class View
View : screen
View : components: Callables
View : add_UIElement(Type, args)
View : draw()

class Controller
Controller : update()

Controller -> View
Controller -> Model
View --> Model

MesaGraphics --> View
MesaGraphics --> Controller
MesaGraphics --> Model

/' ########## Controller part ########## '/

class InputHandler
InputHandler : update()
InputHandler : get_pressed(key)
InputHandler : get_holding(key)
InputHandler : get_released(key)

Controller --> InputHandler

class ButtonsController
ButtonsController : actions
ButtonsController : update(UIButton)
Controller --> ButtonsController
View <-- ButtonsController
Model <-- ButtonsController
ButtonsController --> InputHandler


class SliderController
SliderController : update(UISlider)
Controller --> SliderController
View <-- SliderController
Model <-- SliderController
SliderController --> InputHandler

/' ########## Model part ########## '/

class Model
Model : <color:blue> Model de mesa

/' ##########  View part ########## '/


class UIElement
UIElement : position
UIElement : draw(screen)
View --> UIElement

class Rectangle
UIElement <|-- Rectangle
Rectangle : size
Rectangle : color

class Text
Text : image
Text : set_pos(position)
UIElement <|-- Text

class Button
Button : font
Button : size
Button : hover
Button : name
Button : modify_text(new_text)
Button : set_pos(new_pos)
UIElement <|-- Button
Button --> Text

class UserParam
UserParam : value
UIElement <|-- UserParam

class Slider
Slider : length
Slider : selectedPosX
Slider : min/max
Slider : step
Slider : hover
Slider : type
Slider : set_value(value)
UserParam <|-- Slider

class Checkbox
UserParam <|-- Checkbox


class matplotlib_components
matplotlib_components : create_space_component(Renderer, page)
matplotlib_components : make_mpl_plot_component(measure, post_process, page)

@enduml